# rt-ut

./: CMakeLists.txt  CMakePresets.json  License  ReadMe.md
.github/workflows/: unit-tests.yml
cmake/: installation_setup.cmake  library_setup.cmake
include/: rt-ut
include/rt-ut-incl/: config.hpp  exception.hpp  index.hpp  printable.hpp  string_literal.hpp
test/: CMakeLists.txt  main.cpp
unit-tests/: CMakeLists.txt  main.cpp
